2003-12-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* pygtype.c (pyg_value_as_pyobject): Add special handling for
	GValueArray, converting it to a tuple while calling
	pyg_value_as_pyobject recursively for each inner value.

2003-12-23  James Henstridge  <james@daa.com.au>

	* gtk/gtktreeview.override
	(pygtk_tree_selection_get_selected_rows): implement (fixes bug
	#111489).

	* codegen/h2def.py (clean_func): apply patch from Jon Willeke
	<willeke@users.sourceforge.net> to strip out eg. G_BEGIN_DECLS,
	which was tripping up some of the following regexps (fixes bug
	#129414).

	* pygobject.c (pygobject_get_property): explicitly check if the
	property is readable first, and raise an exception otherwise
	(pygobject_set_property): check if property is readable (fixes bug
	#121544).

2003-12-22  James Henstridge  <james@daa.com.au>

	* setup.py: distutils fixes from Alif Wahid
	<awah005@users.sourceforge.net> (bug #123014).

	* gtk/gdk.override (ignore-win32): ignore gdk_font_get_display.

	* gtk/gtk.override (ignore): ignore plug construct functions.
	(ignore-win32): ignore gtk_plug_new_for_display.

	* gtk/gdk.defs (pixmap_foreign_new_for_display): caller owns return.
	(pixmap_foreign_new): same here (bug #129754).
	(window_foreign_new): same here.
	(window_foreign_new_for_display): same here.

2003-12-20  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* codegen/codegen.py (Wrapper.get_initial_constructor_substdict):
	now receives the constructor FunctionDef as argument.
	(Wrapper.write_constructor): Pass the constructor
	get_initial_constructor_substdict.
	(GObjectWrapper.get_initial_constructor_substdict): Receive/pass
	constructor argument. If constructor's caller_owns_return flag is
	set to #f, add an extra g_object_ref(self->obj).
	(GBoxedWrapper.get_initial_constructor_sub): Receive/pass extra
	constructor argument.
	(GPointerWrapper.get_initial_constructor_substdict): idem.

2003-12-17  James Henstridge  <james@daa.com.au>
