@@ -1,3 +1,9 @@
+2004-01-14  Johan Dahlin  <johan@gnome.org>
+
+	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_iter_n_children):
+	Allow iter to be set to NULL, based on patch by Don Allingham
+	Fixes bug 125172
+
 2003-12-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
 	* pygtype.c (pyg_value_as_pyobject): Add special handling for
